CA_TME1/CPA_TME1/parser.output
   0  $accept : %entry% $end

   1  minibasic : expr EOL

   2  expr : expr PLUS expr
   3       | expr MIN expr
   4       | term

   5  term : term MUL term
   6       | term DIV term
   7       | factor

   8  factor : INTEGER
   9         | LPAREN expr RPAREN

  10  instr : PRINT expr_list

  11  expr_list : expr ';'
  12            | expr ';' expr_list

  13  %entry% : '\001' minibasic

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . minibasic  (13)

	LPAREN  shift 3
	INTEGER  shift 4
	.  error

	minibasic  goto 5
	expr  goto 6
	term  goto 7
	factor  goto 8


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	factor : LPAREN . expr RPAREN  (9)

	LPAREN  shift 3
	INTEGER  shift 4
	.  error

	expr  goto 9
	term  goto 7
	factor  goto 8


state 4
	factor : INTEGER .  (8)

	.  reduce 8


state 5
	%entry% : '\001' minibasic .  (13)

	.  reduce 13


state 6
	minibasic : expr . EOL  (1)
	expr : expr . PLUS expr  (2)
	expr : expr . MIN expr  (3)

	PLUS  shift 10
	MIN  shift 11
	EOL  shift 12
	.  error


state 7
	expr : term .  (4)
	term : term . MUL term  (5)
	term : term . DIV term  (6)

	MUL  shift 13
	DIV  shift 14
	PLUS  reduce 4
	MIN  reduce 4
	EOL  reduce 4
	RPAREN  reduce 4


state 8
	term : factor .  (7)

	.  reduce 7


state 9
	expr : expr . PLUS expr  (2)
	expr : expr . MIN expr  (3)
	factor : LPAREN expr . RPAREN  (9)

	PLUS  shift 10
	MIN  shift 11
	RPAREN  shift 15
	.  error


state 10
	expr : expr PLUS . expr  (2)

	LPAREN  shift 3
	INTEGER  shift 4
	.  error

	expr  goto 16
	term  goto 7
	factor  goto 8


state 11
	expr : expr MIN . expr  (3)

	LPAREN  shift 3
	INTEGER  shift 4
	.  error

	expr  goto 17
	term  goto 7
	factor  goto 8


state 12
	minibasic : expr EOL .  (1)

	.  reduce 1


state 13
	term : term MUL . term  (5)

	LPAREN  shift 3
	INTEGER  shift 4
	.  error

	term  goto 18
	factor  goto 8


state 14
	term : term DIV . term  (6)

	LPAREN  shift 3
	INTEGER  shift 4
	.  error

	term  goto 19
	factor  goto 8


state 15
	factor : LPAREN expr RPAREN .  (9)

	.  reduce 9


state 16
	expr : expr . PLUS expr  (2)
	expr : expr PLUS expr .  (2)
	expr : expr . MIN expr  (3)

	.  reduce 2


state 17
	expr : expr . PLUS expr  (2)
	expr : expr . MIN expr  (3)
	expr : expr MIN expr .  (3)

	.  reduce 3


state 18
	term : term . MUL term  (5)
	term : term MUL term .  (5)
	term : term . DIV term  (6)

	.  reduce 5


state 19
	term : term . MUL term  (5)
	term : term . DIV term  (6)
	term : term DIV term .  (6)

	.  reduce 6


Rules never reduced:
	instr : PRINT expr_list  (10)
	expr_list : expr ';'  (11)
	expr_list : expr ';' expr_list  (12)


13 terminals, 8 nonterminals
14 grammar rules, 20 states
